[package]
name = "income"
repository = "https://github.com/wcampbell0x2a/income"
version = "0.1.0"
edition = "2021"
rust-version = "1.60.0"
license = "MIT/Apache-2.0"
authors = ["wcampbell <wcampbell1995@gmail.com>"]
description = "Library for the reading of UBI images"
keywords = ["filesystem", "deku", "ubi", "linux"]
categories = ["filesystem", "parsing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deku = { git = "https://github.com/sharksforarms/deku", branch = "impl-reader" }
