[package]
name = "income"
repository = "https://github.com/wcampbell0x2a/income"
version = "0.2.0"
edition = "2021"
rust-version = "1.60.0"
license = "MIT/Apache-2.0"
authors = ["wcampbell <wcampbell1995@gmail.com>"]
description = "Library for the reading of UBI images"
keywords = ["filesystem", "deku", "ubi", "linux"]
categories = ["filesystem", "parsing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deku = "0.18.0"
env_logger = "0.11.5"
log = "0.4.22"
