[package]
name = "income"
repository = "https://github.com/wcampbell0x2a/income"
version = "0.3.0"
edition = "2021"
rust-version = "1.60.0"
license = "MIT/Apache-2.0"
authors = ["wcampbell <wcampbell1995@gmail.com>"]
description = "Library for the reading of UBI images"
keywords = ["filesystem", "deku", "ubi", "linux"]
categories = ["filesystem", "parsing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.0.32", features = ["derive"] }
deku = "0.19.1"
env_logger = { version = "0.11.5", features = ["color"] }
log = "0.4.22"
